gccida/c3/build_qualified_type
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_qualified_type/src/tree.c:3537:12: error: expected expression
*( _OWORD *)( p_chain + 9) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_qualified_type/src/tree.c:3537:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( p_chain + 9) = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_qualified_type/src/obj/tree.o] Error 1
